<resources>
    <string name="app_name">WeConnect</string>
    <string name="desc_logo">logo</string>
    <string name="newcomers_meet_locals">Newcomers Meet Locals</string>
    <string name="we_will_never_post_without_your_permission">We will never post without your permission.</string>
    <string name="login_cancelled">Login cancelled</string>
    <string name="login_failed">Login failed</string>
    <string name="welcome_to_we_connect">Welcome to WeConnect,</string>
    <string name="name">Name !</string>
    <string name="what_are_you_interested_in">What are you interested in?</string>
    <string name="interest">interest</string>
    <string name="continue_">Continue</string>
    <string name="desc_icon">icon</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_mail_subject">Feedback WeConnect App Version </string>
    <string name="feedback_mail_text">Write your feedback here</string>
    <string name="feedback_mail_send">Send</string>
    <string name="desc_profile_picture">profile picture</string>
    <string name="profile_name">Profile name</string>
    <string name="discover_people">Discover people with the same interests and connect on Facebook:</string>
    <string name="no_interest">Sorry, no shared interests at the moment. Try again soon!</string>
    <string name="settings">Settings</string>
    <string name="done">Done</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="logout">Logout</string>
    <string name="reloaded_contacts">Reloaded contacts</string>
    <string name="desc_toolbar_logo">toolbar logo</string>
    <string name="newcomer_or_local">Are you a newcomer in Berlin or are you a local?</string>
    <string name="i_am_a_newcomer">newcomer</string>
    <string name="i_am_a_local">local</string>
    <string name="only_same_gender">same gender</string>
    <string name="who_to_meet">Who would you like to meet?</string>
    <string name="everybody">everybody</string>
    <string name="maleOrFemale">Are you male or female?</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="visit_us">Visit us</string>
    <plurals name="shared_interests">
        <item quantity="one">%d shared interest</item>
        <item quantity="two">%d shared interests</item>
        <item quantity="few">%d shared interests</item>
        <item quantity="many">%d shared interests</item>
        <item quantity="other">%d shared interests</item>
    </plurals>
    <string name="contact_on_facebook">Contact on Facebook</string>
    <string name="contact">Contact</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="retry">Retry</string>
    <string name="close_app">Close App</string>
    <string name="developer">developer</string>
    <string name="issuetracker">issue tracker</string>
    <string name="license">license</string>
    <string name="website">website</string>
    <string name="version">version</string>
    <string name="company">company</string>
    <string name="by">by</string>
    <string name="about">About</string>
    <string name="interest_category">Interest Category</string>
    <string name="both" translatable="false">both</string>
    <string name="at_weconnect_berlin" translatable="false">\@weconnect.berlin</string>
    <string name="password">password</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="delete_account">Delete account</string>
    <string name="cancel">Cancel</string>
    <string name="delete_account_question">Do you really want to delete your account? All data will be removed permanently.</string>
</resources>
