<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="berlin.weconnect.weconnect.view.activities.InterestsActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/toolbar_height">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/welcome_to_we_connect"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="@dimen/common_text_size" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="@dimen/common_text_size" />

            <TextView
                android:id="@+id/tvNewcomerOrLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newcomer_or_local"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="@dimen/common_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llNewcomer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/gender_box_height"
                android:layout_marginBottom="@dimen/gender_box_spacing"
                android:layout_marginEnd="@dimen/gender_box_margin"
                android:layout_marginStart="@dimen/gender_box_margin"
                android:layout_marginTop="@dimen/gender_box_spacing"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal"
                android:padding="@dimen/gender_box_padding">

                <CheckBox
                    android:id="@+id/cbNewcomer"
                    android:layout_width="@dimen/checkbox_size"
                    android:layout_height="@dimen/checkbox_size"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/checkbox_margin"
                    android:button="@drawable/radio_button" />

                <TextView
                    android:id="@+id/tvNewcomer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/common_text_margin"
                    android:text="@string/i_am_a_newcomer"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLocal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/gender_box_height"
                android:layout_marginBottom="@dimen/gender_box_spacing"
                android:layout_marginEnd="@dimen/gender_box_margin"
                android:layout_marginStart="@dimen/gender_box_margin"
                android:layout_marginTop="@dimen/gender_box_spacing"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal"
                android:padding="@dimen/gender_box_padding">

                <CheckBox
                    android:id="@+id/cbLocal"
                    android:layout_width="@dimen/checkbox_size"
                    android:layout_height="@dimen/checkbox_size"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/checkbox_margin"
                    android:button="@drawable/radio_button" />

                <TextView
                    android:id="@+id/tvLocal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/common_text_margin"
                    android:text="@string/i_am_a_local"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvMaleOrFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maleOrFemale"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="@dimen/common_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llMale"
                android:layout_width="match_parent"
                android:layout_height="@dimen/gender_box_height"
                android:layout_marginBottom="@dimen/gender_box_spacing"
                android:layout_marginEnd="@dimen/gender_box_margin"
                android:layout_marginStart="@dimen/gender_box_margin"
                android:layout_marginTop="@dimen/gender_box_spacing"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal"
                android:padding="@dimen/gender_box_padding">

                <CheckBox
                    android:id="@+id/cbMale"
                    android:layout_width="@dimen/checkbox_size"
                    android:layout_height="@dimen/checkbox_size"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/checkbox_margin"
                    android:button="@drawable/radio_button" />

                <TextView
                    android:id="@+id/tvMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/common_text_margin"
                    android:text="@string/male"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFemale"
                android:layout_width="match_parent"
                android:layout_height="@dimen/gender_box_height"
                android:layout_marginBottom="@dimen/gender_box_spacing"
                android:layout_marginEnd="@dimen/gender_box_margin"
                android:layout_marginStart="@dimen/gender_box_margin"
                android:layout_marginTop="@dimen/gender_box_spacing"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal"
                android:padding="@dimen/gender_box_padding">

                <CheckBox
                    android:id="@+id/cbFemale"
                    android:layout_width="@dimen/checkbox_size"
                    android:layout_height="@dimen/checkbox_size"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/checkbox_margin"
                    android:button="@drawable/radio_button" />

                <TextView
                    android:id="@+id/tvFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/common_text_margin"
                    android:text="@string/female"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvWhoToMeet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/who_to_meet"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="@dimen/common_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llOnlySameGender"
                android:layout_width="match_parent"
                android:layout_height="@dimen/gender_box_height"
                android:layout_marginBottom="@dimen/gender_box_spacing"
                android:layout_marginEnd="@dimen/gender_box_margin"
                android:layout_marginStart="@dimen/gender_box_margin"
                android:layout_marginTop="@dimen/gender_box_spacing"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal"
                android:padding="@dimen/gender_box_padding">

                <CheckBox
                    android:id="@+id/cbOnlySameGender"
                    android:layout_width="@dimen/checkbox_size"
                    android:layout_height="@dimen/checkbox_size"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/checkbox_margin"
                    android:button="@drawable/radio_button" />

                <TextView
                    android:id="@+id/tvOnlySameGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/common_text_margin"
                    android:text="@string/only_same_gender"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llEverybody"
                android:layout_width="match_parent"
                android:layout_height="@dimen/gender_box_height"
                android:layout_marginBottom="@dimen/gender_box_spacing"
                android:layout_marginEnd="@dimen/gender_box_margin"
                android:layout_marginStart="@dimen/gender_box_margin"
                android:layout_marginTop="@dimen/gender_box_spacing"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal"
                android:padding="@dimen/gender_box_padding">

                <CheckBox
                    android:id="@+id/cbEverybody"
                    android:layout_width="@dimen/checkbox_size"
                    android:layout_height="@dimen/checkbox_size"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/checkbox_margin"
                    android:button="@drawable/radio_button" />

                <TextView
                    android:id="@+id/tvEverybody"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/common_text_margin"
                    android:text="@string/everybody"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:background="@color/button_inactive"
                android:padding="@dimen/button_padding"
                android:text="@string/continue_"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/toolbar_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <FrameLayout
                android:id="@+id/shadow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="@drawable/bottom_shadow" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
