<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvMaleOrFemale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/maleOrFemale"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="@dimen/common_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llMale"
        android:layout_width="match_parent"
        android:layout_height="@dimen/gender_box_height"
        android:layout_marginBottom="@dimen/gender_box_spacing"
        android:layout_marginEnd="@dimen/gender_box_margin"
        android:layout_marginStart="@dimen/gender_box_margin"
        android:layout_marginTop="@dimen/gender_box_spacing"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:padding="@dimen/gender_box_padding">

        <CheckBox
            android:id="@+id/cbMale"
            android:layout_width="@dimen/checkbox_size"
            android:layout_height="@dimen/checkbox_size"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/checkbox_margin"
            android:button="@drawable/radio_button" />

        <TextView
            android:id="@+id/tvMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/common_text_margin"
            android:text="@string/male"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFemale"
        android:layout_width="match_parent"
        android:layout_height="@dimen/gender_box_height"
        android:layout_marginBottom="@dimen/gender_box_spacing"
        android:layout_marginEnd="@dimen/gender_box_margin"
        android:layout_marginStart="@dimen/gender_box_margin"
        android:layout_marginTop="@dimen/gender_box_spacing"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:padding="@dimen/gender_box_padding">

        <CheckBox
            android:id="@+id/cbFemale"
            android:layout_width="@dimen/checkbox_size"
            android:layout_height="@dimen/checkbox_size"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/checkbox_margin"
            android:button="@drawable/radio_button" />

        <TextView
            android:id="@+id/tvFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/common_text_margin"
            android:text="@string/female"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
